# printf

./: CMakeLists.txt  Makefile  a.out  author
includes/: printf.h
libft/: Makefile  a  ft_itoa_Ubase.c  ft_itoa_base.c  ft_itoa_float.c  ft_itoa_uns.c  ft_putstr.c  ft_strchr.c  ft_strjoin_free.c  ft_strlen.c  ft_strstr.c  libft.h  libft.h.gch
libft/a.dSYM/Contents/Resources/DWARF/: a
srcs/: addit.c  apply_flag.c  apply_flags.c  apply_formats.c  apply_precision.c  apply_pres_f.c  apply_specific_format.c  apply_specific_format2.c  apply_width.c  basictest.txt  flist.c  float.c  fract.c  ft_float.h  ft_printf.c  main.c  moulitest.txt  mult.c  output.c  parse_arguments.c  parse_format.c  power.c  printf.h  start.c  throw_error.c  validation.c  whole.c
